syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AnimatorParameterValueInfo.proto";


message EvtAnimatorParameterInfo {
	int32 name_id = 8;
	bool is_server_cache = 7;
	uint32 entity_id = 13;
	AnimatorParameterValueInfo value = 5;
}