syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "SceneEntityInfo.proto";
import "VisionType.proto";


message SceneEntityAppearNotify {
	uint32 param = 1;
	VisionType appear_type = 4;
	repeated SceneEntityInfo entity_list = 2;
}